{
  "version": 4,
  "terraform_version": "1.3.3",
  "serial": 722,
  "lineage": "06bc48b3-8497-d768-c4b1-daf55925746a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "VIJAY-TERRAFORM",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-017fecd1353bcc96e",
            "arn": "arn:aws:ec2:us-west-2:874981734016:instance/i-03d138f7a04c5d0b2",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "vijay_profile",
            "id": "i-03d138f7a04c5d0b2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "ninaquad",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0c0f5480fc9b5bda2",
            "private_dns": "ip-10-0-1-69.us-west-2.compute.internal",
            "private_ip": "10.0.1.69",
            "public_dns": "ec2-52-42-163-6.us-west-2.compute.amazonaws.com",
            "public_ip": "52.42.163.6",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0911ea0d8d0c51218",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-051710d5245c842fd",
            "tags": {
              "Name": "Terraform-1"
            },
            "tags_all": {
              "Name": "Terraform-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0698350214876bcf0"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.vijay_profile",
            "aws_iam_role.access_role",
            "aws_security_group.public-SG",
            "aws_subnet.my-public-subnet",
            "aws_vpc.myvpc",
            "data.template_file.user-data"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-017fecd1353bcc96e",
            "arn": "arn:aws:ec2:us-west-2:874981734016:instance/i-0a4ef02467a6a0886",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "vijay_profile",
            "id": "i-0a4ef02467a6a0886",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "ninaquad",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0b0397a2b1f408ba2",
            "private_dns": "ip-10-0-1-234.us-west-2.compute.internal",
            "private_ip": "10.0.1.234",
            "public_dns": "ec2-35-88-31-54.us-west-2.compute.amazonaws.com",
            "public_ip": "35.88.31.54",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0bd569609da8b106f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-051710d5245c842fd",
            "tags": {
              "Name": "Terraform-2"
            },
            "tags_all": {
              "Name": "Terraform-2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0698350214876bcf0"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.vijay_profile",
            "aws_iam_role.access_role",
            "aws_security_group.public-SG",
            "aws_subnet.my-public-subnet",
            "aws_vpc.myvpc",
            "data.template_file.user-data"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-017fecd1353bcc96e",
            "arn": "arn:aws:ec2:us-west-2:874981734016:instance/i-0d7b256d4b22750e0",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "vijay_profile",
            "id": "i-0d7b256d4b22750e0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "ninaquad",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-06ec5bc4b144c99f5",
            "private_dns": "ip-10-0-1-23.us-west-2.compute.internal",
            "private_ip": "10.0.1.23",
            "public_dns": "ec2-54-244-196-106.us-west-2.compute.amazonaws.com",
            "public_ip": "54.244.196.106",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-018823cb7b71939e6",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-051710d5245c842fd",
            "tags": {
              "Name": "Terraform-3"
            },
            "tags_all": {
              "Name": "Terraform-3"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0698350214876bcf0"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.vijay_profile",
            "aws_iam_role.access_role",
            "aws_security_group.public-SG",
            "aws_subnet.my-public-subnet",
            "aws_vpc.myvpc",
            "data.template_file.user-data"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "myIGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:874981734016:internet-gateway/igw-0ea912e1afcd91841",
            "id": "igw-0ea912e1afcd91841",
            "owner_id": "874981734016",
            "tags": {
              "Name": "myIGW"
            },
            "tags_all": {
              "Name": "myIGW"
            },
            "vpc_id": "vpc-0210d10e0eb28a66b"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "vpc-public-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0ea912e1afcd91841",
            "id": "r-rtb-027beecf7df8e1e991080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-027beecf7df8e1e99",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.myIGW",
            "aws_route_table.my-public-RT",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "my-public-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:874981734016:route-table/rtb-027beecf7df8e1e99",
            "id": "rtb-027beecf7df8e1e99",
            "owner_id": "874981734016",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "my-public-RT"
            },
            "tags_all": {
              "Name": "my-public-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0210d10e0eb28a66b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "vpc-public-route-table-associate",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d7d1113a4e39c065",
            "route_table_id": "rtb-027beecf7df8e1e99",
            "subnet_id": "subnet-051710d5245c842fd"
          },
          "dependencies": [
            "aws_route_table.my-public-RT",
            "aws_subnet.my-public-subnet",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public-SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:874981734016:security-group/sg-0698350214876bcf0",
            "description": "VPC public Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all IP and Ports Outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0698350214876bcf0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow Port 2181",
                "from_port": 2181,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2181
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow Port 22",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow Port 2888",
                "from_port": 2888,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2888
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow Port 3888",
                "from_port": 3888,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3888
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow Port 443",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow Port 80",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow Port 9092 for plain kafka connections",
                "from_port": 9092,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9092
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow Port 9093 for ssl kafka connections",
                "from_port": 9093,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9093
              }
            ],
            "name": "myvpc-public-SG",
            "name_prefix": "",
            "owner_id": "874981734016",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0210d10e0eb28a66b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my-public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:874981734016:subnet/subnet-051710d5245c842fd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-051710d5245c842fd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "874981734016",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-public-subnet"
            },
            "tags_all": {
              "Name": "my-public-subnet"
            },
            "vpc_id": "vpc-0210d10e0eb28a66b"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "myvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:874981734016:vpc/vpc-0210d10e0eb28a66b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-04b24beaf784a8d5d",
            "default_route_table_id": "rtb-0d1d351cda99307b3",
            "default_security_group_id": "sg-0aec0ef2d3ca8b568",
            "dhcp_options_id": "dopt-077a34a3356ea52d3",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0210d10e0eb28a66b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d1d351cda99307b3",
            "owner_id": "874981734016",
            "tags": {
              "Name": "myvpc"
            },
            "tags_all": {
              "Name": "myvpc"
            }
          }
        }
      ]
    }
  ]
}